RSSI to distance conversion